# Navi_DeepRL

./: Navi_deepRL.py  Navi_deepRL_testing.py  Navi_deepRL_training.py  README.md  README.md~  collectSample.py  log.csv  restoreSample.py
agent/: agent_mobile.py
agent_ros_2_mobile/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py  setup.py~
agent_ros_2_mobile/launch/: agent_ros_kuka.launch~  agent_ros_mobile.launch
agent_ros_2_mobile/msg/: Command.msg  Command.msg~  Command_4action.py~  DataRequest.msg  GripperCommand.msg~  PositionCommand.msg~  SampleResult.msg~
agent_ros_2_mobile/scripts/: collision_detection.py  core.py  dataCollect_liang.py  preprocessors.py  recordMobile.py  runMobile.py  runMobile_actionlib.py  talker_pub_test.py~
algorithm/: DQNAgent_yuchen.py  DRQN.py  QNetwork_yuchen.py  helper.py  objectives.py  preprocessors.py  utils.py
log/: checkpoint  events.out.tfevents.1502369406.shuang-li  events.out.tfevents.1502369512.shuang-li  events.out.tfevents.1502369585.shuang-li  events.out.tfevents.1502371053.shuang-li  events.out.tfevents.1502371388.shuang-li  qnet0.cptk.index  qnet1.cptk.index
results/: memory.csv
src/: liang_camera.py
utility/: DataFiles.py  miniJerk_movement.py
